Fixed aligns for menu item

--- a/src/partials/collections/_menu.sass
+++ b/src/partials/collections/_menu.sass
@@ -308,11 +308,14 @@
 //-------------------//
 
 .ts.menu .item[class*="center aligned"]
-    text-align: center
+    text-align      : center
+    justify-content: center
 .ts.menu .item[class*="left aligned"]
-    text-align: left
+    text-align      : left
+    justify-content: flex-start
 .ts.menu .item[class*="right aligned"]
-    text-align: right
+    text-align      : right
+    justify-content: flex-end
 
 //-------------------//
 //     Stackable
@@ -621,6 +624,9 @@
     display       : flex
     flex-direction: column
     align-items   : center
+
+.ts.menu.labeled.icon[class*="evenly divided"] .item
+    min-width: 0
 
 .ts.menu.labeled.icon .item > .icon:not(.dropdown)
     height       : 1em
